internal-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: internal-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: internal-api
  template:
    metadata:
      labels:
        app: internal-api
    spec:
      containers:
        - name: internal-api
          image: ana3lu/internal-api:1.0
          ports:
            - containerPort: 8081
