internal-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: internal-api-service
spec:
  selector:
    app: internal-api
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
  type: ClusterIP
