public-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: public-api-service
spec:
  selector:
    app: public-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
