api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  tls: 
  - hosts:
    - apik8s.duckdns.org
    secretName: apik8s-tls
  rules:
  - host: apik8s.duckdns.org 
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: public-api-service
            port:
              number: 8080
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
